--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
   background-color: black;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   text-decoration: none;
   color: #ffb701;
@@ -18,6 +22,10 @@ ul li {
   text-decoration: none;
 }
 
+ul li:hover {
+  cursor: pointer;
+}
+
 .main-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -25,19 +33,21 @@ ul li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 300vh;
+  height: 440vh;
 }
 
 .container {
   overflow-wrap: normal;
   margin: 0 auto;
   width: 80%;
+  height: inherit;
+  height: 100%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 0.3fr 2fr 1.5fr 2fr 2fr 2fr 1fr 1fr;
-      grid-template-rows: 0.3fr 2fr 1.5fr 2fr 2fr 2fr 1fr 1fr;
+  -ms-grid-rows: 0.3fr 1.5fr 1.5fr 2fr 2fr 1fr 0.5fr;
+      grid-template-rows: 0.3fr 1.5fr 1.5fr 2fr 2fr 1fr 0.5fr;
       grid-template-areas: "navbar navbar navbar" "hero hero hero" "tools tools tools" "projects  projects projects" "skills skills skills" "social social social" "footer footer footer";
 }
 
@@ -100,7 +110,7 @@ ul li {
   display: flex;
   background-image: url(/images/logo.png);
   background-repeat: no-repeat;
-  background-position: 100% 40%;
+  background-position: 100% 20%;
   bottom: 100px;
   float: right;
 }
@@ -113,7 +123,7 @@ ul li {
   color: #ffb701;
   font-family: Josefin Sans;
   font-size: 24px;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .tools h3 {
@@ -145,7 +155,7 @@ ul li {
 }
 
 .projects {
-  margin-top: 10%;
+  margin-top: 5%;
   -ms-grid-row: 4;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
@@ -273,7 +283,6 @@ ul li {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: social;
-  margin-top: 10%;
   color: #ffb701;
   font-family: Josefin Sans;
   padding-bottom: 50px;
@@ -307,7 +316,7 @@ ul li {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: footer;
-  background-color: #966c01;
+  background-color: #ffb701;
   padding-top: 20px;
   padding-bottom: 50px;
   display: -webkit-box;
@@ -366,6 +375,10 @@ ul li {
   background: #ffb701;
   -webkit-box-shadow: 0 0 20px #ffb35c5d, 0 0 40px #ffb35c5d, 0 0 60px #ffb35c5d;
           box-shadow: 0 0 20px #ffb35c5d, 0 0 40px #ffb35c5d, 0 0 60px #ffb35c5d;
+}
+
+.tagline button:focus {
+  border: transparent;
 }
 
 .fa-wrench {
