--- a/css/main.scss
+++ b/css/main.scss
@@ -234,6 +234,7 @@ ul li:hover {
 }
 .socialLinks {
   grid-area: social;
+  margin-top: -10%;
 
   color: rgb(255, 183, 1);
   font-family: Josefin Sans;
